[gd_scene load_steps=57 format=3 uid="uid://d08uu7myo8pox"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_haf4o"]
[ext_resource type="Texture2D" uid="uid://bfhntnyurpt5x" path="res://art/sprites/characters/player.png" id="2_hkjio"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uy46m"]
atlas = ExtResource("2_hkjio")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vrc5"]
atlas = ExtResource("2_hkjio")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw6vm"]
atlas = ExtResource("2_hkjio")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvl3q"]
atlas = ExtResource("2_hkjio")
region = Rect2(144, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlwvj"]
atlas = ExtResource("2_hkjio")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4ury"]
atlas = ExtResource("2_hkjio")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbnr1"]
atlas = ExtResource("2_hkjio")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t55a"]
atlas = ExtResource("2_hkjio")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yryte"]
atlas = ExtResource("2_hkjio")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_py2hr"]
atlas = ExtResource("2_hkjio")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s58jf"]
atlas = ExtResource("2_hkjio")
region = Rect2(0, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn2sv"]
atlas = ExtResource("2_hkjio")
region = Rect2(48, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqdrc"]
atlas = ExtResource("2_hkjio")
region = Rect2(96, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm1h5"]
atlas = ExtResource("2_hkjio")
region = Rect2(144, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfa87"]
atlas = ExtResource("2_hkjio")
region = Rect2(192, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sktp5"]
atlas = ExtResource("2_hkjio")
region = Rect2(240, 240, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6imr"]
atlas = ExtResource("2_hkjio")
region = Rect2(0, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pmqf"]
atlas = ExtResource("2_hkjio")
region = Rect2(48, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbq6t"]
atlas = ExtResource("2_hkjio")
region = Rect2(96, 432, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrjl5"]
atlas = ExtResource("2_hkjio")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_328s2"]
atlas = ExtResource("2_hkjio")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ninc1"]
atlas = ExtResource("2_hkjio")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sqpq"]
atlas = ExtResource("2_hkjio")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_g76ny"]
atlas = ExtResource("2_hkjio")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo1kh"]
atlas = ExtResource("2_hkjio")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxjwe"]
atlas = ExtResource("2_hkjio")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx3st"]
atlas = ExtResource("2_hkjio")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqscs"]
atlas = ExtResource("2_hkjio")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_14yn4"]
atlas = ExtResource("2_hkjio")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgv5h"]
atlas = ExtResource("2_hkjio")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpt3q"]
atlas = ExtResource("2_hkjio")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0igc"]
atlas = ExtResource("2_hkjio")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dht65"]
atlas = ExtResource("2_hkjio")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qm0l"]
atlas = ExtResource("2_hkjio")
region = Rect2(192, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ang26"]
atlas = ExtResource("2_hkjio")
region = Rect2(240, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8k8w"]
atlas = ExtResource("2_hkjio")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4splw"]
atlas = ExtResource("2_hkjio")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuosl"]
atlas = ExtResource("2_hkjio")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7nky"]
atlas = ExtResource("2_hkjio")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7blm7"]
atlas = ExtResource("2_hkjio")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpm1e"]
atlas = ExtResource("2_hkjio")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_luk1d"]
atlas = ExtResource("2_hkjio")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjl7p"]
atlas = ExtResource("2_hkjio")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_34si7"]
atlas = ExtResource("2_hkjio")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vgks"]
atlas = ExtResource("2_hkjio")
region = Rect2(240, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8imt"]
atlas = ExtResource("2_hkjio")
region = Rect2(0, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqye4"]
atlas = ExtResource("2_hkjio")
region = Rect2(48, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yu3xh"]
atlas = ExtResource("2_hkjio")
region = Rect2(96, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s65v6"]
atlas = ExtResource("2_hkjio")
region = Rect2(144, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0xqe"]
atlas = ExtResource("2_hkjio")
region = Rect2(192, 192, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdkq3"]
atlas = ExtResource("2_hkjio")
region = Rect2(240, 192, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_yn1xn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uy46m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vrc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw6vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvl3q")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlwvj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4ury")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbnr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t55a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yryte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_py2hr")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s58jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn2sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqdrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm1h5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfa87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sktp5")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6imr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pmqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbq6t")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrjl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_328s2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ninc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sqpq")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g76ny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo1kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxjwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx3st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqscs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14yn4")
}],
"loop": true,
"name": &"front_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgv5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpt3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h0igc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dht65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qm0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ang26")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8k8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4splw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuosl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7nky")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7blm7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpm1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luk1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjl7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34si7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vgks")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8imt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqye4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yu3xh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s65v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0xqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdkq3")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v7375"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_fabi8"]
radius = 13.0

[node name="player" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_haf4o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -2)
sprite_frames = SubResource("SpriteFrames_yn1xn")
animation = &"side_idle"
frame = 3
frame_progress = 0.486107
offset = Vector2(0, -15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(-1, -3)
shape = SubResource("CircleShape2D_v7375")
debug_color = Color(0.180418, 0.568179, 0.810704, 0.42)

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(-1, -8)
shape = SubResource("CircleShape2D_fabi8")
debug_color = Color(0.651846, 0.513986, 0.201373, 0.42)

[node name="damage_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="damage_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
